# prediction_rugby

./: .gitignore  pyproject.toml
forecast_rugby/: executer.py  main.py
forecast_rugby/lib/: cfg.py  fdj.py  model.py  scorecast.py  scrap.py  util.py
